OO-6514: custom MySQL dialect to fix wrong cast in sub-select